<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bookshelf"
    android:orientation="vertical"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="243dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="156dp"
        android:fontFamily="@font/candal"
        android:text="@string/CrateAccount"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/labelUserId"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUserId"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EditUserId"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/dark_gray"
        android:textColorHighlight="@color/dark_blue"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_gray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/labelUserPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/labelUserPw"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUserPw"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EditUserPw"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/dark_gray"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_gray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/labelUserReneterPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/labelUserRenterPw"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUserRePw"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EditUserRePw"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/dark_gray"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_gray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/labelUserFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/labelUserFName"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUserFname"
        android:layout_width="370dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EditUserFName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/dark_gray"
        android:textColorHighlight="@color/dark_blue"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_gray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/labelUserLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/labelUserLName"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUserLname"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EditUserLName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/dark_gray"
        android:textColorHighlight="@color/dark_blue"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_gray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />



    <TextView
        android:id="@+id/labelUserAdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/labelUserAdr"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUserAdr"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EditUserAdr"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/dark_gray"
        android:textColorHighlight="@color/dark_blue"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_gray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/labelUserAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/labelUserAge"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUserAge"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EditUserAge"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/dark_gray"
        android:textColorHighlight="@color/dark_blue"
        android:textColorHint="@color/dark_gray"
        android:textColorLink="@color/dark_gray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="165dp"
        android:layout_height="68dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:background="#000000"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24sp" />


</LinearLayout>